{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 129,
  "lineage": "0683143c-7a3d-874f-c1eb-02ede5add2e2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c5f3be910608c7d4",
            "arn": "arn:aws:ec2:ap-southeast-1:825770460273:elastic-ip/eipalloc-0c5f3be910608c7d4",
            "domain": "vpc",
            "id": "eipalloc-0c5f3be910608c7d4",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-13-228-43-79.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "13.228.43.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "nat1-eip"
            },
            "tags_all": {
              "Name": "nat1-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igwtf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:825770460273:internet-gateway/igw-0dd4fbfbc80324518",
            "id": "igw-0dd4fbfbc80324518",
            "owner_id": "825770460273",
            "tags": {
              "Name": "igw-tf",
              "Owner": "VietAWS"
            },
            "tags_all": {
              "Name": "igw-tf",
              "Owner": "VietAWS"
            },
            "vpc_id": "vpc-0b4809e2dd7959cc5"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c5f3be910608c7d4",
            "association_id": "eipassoc-031a91e4c4b839cef",
            "connectivity_type": "public",
            "id": "nat-0c7bdcb81f6f52218",
            "network_interface_id": "eni-0b002be2d248d148a",
            "private_ip": "10.0.79.217",
            "public_ip": "13.228.43.79",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a80574c1e1031ffd",
            "tags": {
              "Name": "nat1-tf"
            },
            "tags_all": {
              "Name": "nat1-tf"
            }
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.igwtf",
            "aws_subnet.public_1a",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:825770460273:route-table/rtb-016d5581f88daae9e",
            "id": "rtb-016d5581f88daae9e",
            "owner_id": "825770460273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c7bdcb81f6f52218",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private1-rtb-tf"
            },
            "tags_all": {
              "Name": "private1-rtb-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4809e2dd7959cc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.igwtf",
            "aws_nat_gateway.nat1",
            "aws_subnet.public_1a",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:825770460273:route-table/rtb-0aef4e73450c1fa07",
            "id": "rtb-0aef4e73450c1fa07",
            "owner_id": "825770460273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd4fbfbc80324518",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rtb-tf"
            },
            "tags_all": {
              "Name": "public-rtb-tf"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b4809e2dd7959cc5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igwtf",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1551dc3ae3af595",
            "route_table_id": "rtb-016d5581f88daae9e",
            "subnet_id": "subnet-08b5c30dc3cbc8bce"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.igwtf",
            "aws_nat_gateway.nat1",
            "aws_route_table.private_rtb",
            "aws_subnet.private_1a",
            "aws_subnet.public_1a",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b78ad92cad6b05eb",
            "route_table_id": "rtb-016d5581f88daae9e",
            "subnet_id": "subnet-0a1a4274269f6fa0d"
          },
          "dependencies": [
            "aws_eip.nat1",
            "aws_internet_gateway.igwtf",
            "aws_nat_gateway.nat1",
            "aws_route_table.private_rtb",
            "aws_subnet.private_1b",
            "aws_subnet.public_1a",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e8d3e00ab4601e0",
            "route_table_id": "rtb-0aef4e73450c1fa07",
            "subnet_id": "subnet-0a80574c1e1031ffd"
          },
          "dependencies": [
            "aws_internet_gateway.igwtf",
            "aws_route_table.public_rtb",
            "aws_subnet.public_1a",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07617d3c2d64dfd93",
            "route_table_id": "rtb-0aef4e73450c1fa07",
            "subnet_id": "subnet-056f62df6e21deb13"
          },
          "dependencies": [
            "aws_internet_gateway.igwtf",
            "aws_route_table.public_rtb",
            "aws_subnet.public_1b",
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:825770460273:subnet/subnet-08b5c30dc3cbc8bce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b5c30dc3cbc8bce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825770460273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-tf-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-tf-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b4809e2dd7959cc5"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:825770460273:subnet/subnet-0a1a4274269f6fa0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.32.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a1a4274269f6fa0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "825770460273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-tf-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "private-tf-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0b4809e2dd7959cc5"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:825770460273:subnet/subnet-0a80574c1e1031ffd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a80574c1e1031ffd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825770460273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-tf-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-tf-1a",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b4809e2dd7959cc5"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:825770460273:subnet/subnet-056f62df6e21deb13",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.96.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056f62df6e21deb13",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "825770460273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-tf-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "public-tf-1b",
              "kubernetes.io/cluster/demo": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0b4809e2dd7959cc5"
          },
          "dependencies": [
            "aws_vpc.vpctf"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpctf",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:825770460273:vpc/vpc-0b4809e2dd7959cc5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0aaedd86a833e2884",
            "default_route_table_id": "rtb-0e9f32aa6a83f9084",
            "default_security_group_id": "sg-0be6acc569b7bccc1",
            "dhcp_options_id": "dopt-0d86274fb0ff9c0a0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b4809e2dd7959cc5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e9f32aa6a83f9084",
            "owner_id": "825770460273",
            "tags": {
              "Environment": "Dev",
              "Name": "viet-tf",
              "Owner": "VietAWS"
            },
            "tags_all": {
              "Environment": "Dev",
              "Name": "viet-tf",
              "Owner": "VietAWS"
            }
          }
        }
      ]
    }
  ]
}